--- a/matrix_lms/user_auth/templates/auth/base.html
+++ b/matrix_lms/user_auth/templates/auth/base.html
@@ -6,6 +6,7 @@
         {% block title %}
         {% endblock %}
     </title>
+    <link rel="stylesheet" type="text/css"  href="{% static 'auth/css/style.css'} %">
 </head>
 <body>
 {% block body %}
