--- a/matrix_lms/user_auth/templates/auth/register.html
+++ b/matrix_lms/user_auth/templates/auth/register.html
@@ -1,14 +1,14 @@
 {% extends 'auth/base.html' %}
 {% block title %}
-Login
+Register
 {% endblock %}
 
 {% block body %}
-{%load static%}
-<h1>Login</h1>
+<h1>Register</h1>
 <form method="post">
     {% csrf_token %}
     {{form.as_p}}
-    <button type="submit">Login</button>
+
+    <button type="submit">Register</button>
 </form>
 {% endblock %}
