Add app courses

--- a/matrix_lms/user_auth/static/auth/css/style.css
+++ b/matrix_lms/user_auth/static/auth/css/style.css
@@ -32,3 +32,11 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: #3e8e41;
 }
+
+p{
+    width: 95%;
+}
+
+li {
+    color: green;
+}
