--- a/matrix_lms/user_auth/templates/auth/base.html
+++ b/matrix_lms/user_auth/templates/auth/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +7,7 @@
         {% block title %}
         {% endblock %}
     </title>
+    <link rel="stylesheet" href="{% static 'auth/css/style.css' %}" type="text/css">
 </head>
 <body>
 {% block body %}
