--- a/matrix_lms/user_auth/templates/auth/login.html
+++ b/matrix_lms/user_auth/templates/auth/login.html
@@ -1,9 +1,11 @@
 {% extends 'auth/base.html' %}
+{% load static %}
 {% block title %}
 Login
 {% endblock %}
 
 {% block body %}
+{% load static %}
 <h1>Login</h1>
 <form method="post">
     {% csrf_token %}
